{
    "name": "DuckTouchControl",
    "maps": [
        {
            "name": "TouchControls",
            "id": "89cfe50d-55df-4839-9f3a-dba4df29b6dd",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "861cf2c8-a098-47bd-92c7-e680507d2218",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "e06d05eb-97f3-49a8-9cf4-4a9e384e97ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aac0fc7b-97a1-40eb-b921-f64972a5743a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0016d08-c5c1-458e-b898-e53acf9a4d59",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PcControls",
            "id": "894077e3-7719-40ce-82b2-b1e71d6ff091",
            "actions": [
                {
                    "name": "Fly",
                    "type": "Button",
                    "id": "86360b07-25a1-4a8a-80a5-77003eda0d26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dive",
                    "type": "Button",
                    "id": "2784da00-2815-47ef-9096-bac8eb6da052",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7fc552b-c38e-48ea-a9a0-d116c59208d6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be81acc1-8800-43b4-98b6-9c95e2618153",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dive",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}